# Audio-Trainer

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-inference.txt  requirements.txt
.documentation/: research-audio-generation-training.md  voice-cloning-recording-guide.md
cli/: main.py
configs/: inference.yaml  preprocessing.yaml  training.yaml
core/: config.py  constants.py
docker/: Dockerfile.inference  Dockerfile.train
docker/scripts/: entrypoint-inference.sh  entrypoint-train.sh
inference/: api.py  batch.py  postprocess.py  synthesizer.py
preprocessing/: audio_slicer.py  denoiser.py  normalizer.py  pipeline.py  transcriber.py  validator.py
scripts/: download_models.sh  setup.sh
tests/: test_inference.py  test_preprocessing.py  test_training.py
training/: evaluate.py  trainer.py
training/configs/: default.yaml  quality.yaml  quick.yaml
